🐛 FIX: tab image alignment and logo on burger menu

--- a/src/scss/blocks/_site-head.scss
+++ b/src/scss/blocks/_site-head.scss
@@ -8,8 +8,6 @@
 }
 
 .logo {
-  position: relative;
-  z-index: 100;
   max-inline-size: min-content;
   margin-block-start: 8px;
 }
