--- a/src/scss/blocks/_tabs.scss
+++ b/src/scss/blocks/_tabs.scss
@@ -62,6 +62,7 @@
   > .tab-image {
     display: grid;
     flex-basis: 100%;
+    justify-content: center;
   }
 }
 
